--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 <div class="form-container" id="inquiry-form">
                     <h3>الاستعلام عن القبول</h3>
                     <div class="form-group">
-                        <label for="inquiry-id">رقم الطلب</label>
-                        <input type="text" id="inquiry-id" name="applicationNumber" placeholder="أدخل رقم الطلب">
+                        <label for="inquiry-id">رقم الهوية/الإقامة</label>
+                        <input type="text" id="inquiry-id" name="idNumber" placeholder="أدخل رقم الهوية أو الإقامة">
                     </div>
                     <div class="form-group">
                         <label for="inquiry-phone">رقم الجوال</label>
