--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <header class="login-header">
             <div class="university-logo">
                 <div class="logo-circle">
-                    <img src="assets/images/kfu_logo.png" alt="شعار جامعة الملك فيصل" loading="eager">
+                    <img src="kfu_logo.png" alt="شعار جامعة الملك فيصل" loading="eager">
                 </div>
                 <h1>جامعة الملك فيصل</h1>
                 <p>بوابة الخدمات الأكاديمية</p>
