تحديث رقم الحساب البنكي إلى حسابي الجديد
تم استبدال رقم الآيبان القديم برقم الآيبان الجديد للبنك الأهلي ، وتحديث اسم البنك في صفحة الدفع.

--- a/dashboard.html
+++ b/dashboard.html
@@ -542,9 +542,9 @@
                     <h4>تعليمات السداد</h4>
                     <p>يرجى تحويل المبلغ المستحق إلى الحساب البنكي التالي ثم إرفاق صورة من إيصال التحويل.</p>
                     <div class="bank-details">
-                        <p><strong>اسم البنك:</strong>البنك الراجحي</p>
+                        <p><strong>اسم البنك:</strong>البنك الاهلي</p>
                
-                        <p><strong>رقم الآيبان:</strong> <span id="ibanNumber">SA5480000318608016038504</span></p>
+                        <p><strong>رقم الآيبان:</strong> <span id="ibanNumber">SA1980000857608010276380</span></p>
                         <p><strong>المبلغ المستحق:</strong> <span id="paymentAmount">2,000</span> ريال سعودي</p>
                     </div>
                 </div>
