Update quick access link to use showNotificationAndForm
Signed-off-by: abdullahyour <abdullahyourdomain@gmail.com>

--- a/index.html
+++ b/index.html
@@ -134,9 +134,10 @@
                 <div class="quick-access">
                     <h3>وصول سريع</h3>
                     <div class="quick-links">
-                        <a href="#" class="quick-link" onclick="document.getElementById('registration-form').style.display='block';">
-    <i class="fas fa-user-graduate" aria-hidden="true"></i>
+                        <a href="#" class="quick-link" onclick="showNotificationAndForm()">
+    <i class="fas fa-user-graduate"></i>
     <span>تقديم طلب جديد</span>
+                        </a>
                         </a>
                         <a href="#" class="quick-link" onclick="showAcademicNumberInquiry()">
                             <i class="fas fa-file-alt" aria-hidden="true"></i>
